# tansu

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  package.json
.github/workflows/: e2e.yml  lint.yml  sbom.yml
contracts/scf-membership/: Cargo.toml  metadata.json
contracts/scf-membership/src/: errors.rs  events.rs  lib.rs  scf_governance.rs  scf_token.rs  tests.rs  types.rs
contracts/tansu/src/: contract_dao.rs  contract_membership.rs  contract_tansu.rs  contract_versioning.rs  lib.rs  types.rs
contracts/tansu/src/tests/: test_dao.rs  test_utils.rs
dapp/: netlify.toml  package.json
dapp/public/: sw.js
dapp/src/components/: ConnectWallet.astro  NavbarSearch.tsx  stellar-wallets-kit.ts
dapp/src/components/page/dashboard/: CreateProjectModal.tsx  ProjectCard.tsx  ProjectInfoModal.jsx  ProjectList.jsx
dapp/src/components/page/project/: CommitHistory.jsx  ProjectInfo.astro  ReadMoreModal.tsx  ReadmeViewer.tsx  SubProjectsSection.tsx
dapp/src/components/page/proposal/: ProposalDetail.tsx  (+4 more)
dapp/src/components/utils/: SimpleMarkdownEditor.tsx  Spinner.tsx  TermsAcceptanceModal.tsx
dapp/src/constants/: featuredProjectsConfigData.js  proposalTemplates.ts
dapp/src/layouts/: Layout.astro
dapp/src/pages/proposal/: index.astro
dapp/src/service/: ContractService.ts  FlowService.ts  StateService.ts  TxService.ts  walletService.ts
dapp/src/styles/: global.css
dapp/src/utils/: dualPin.ts  store.ts
dapp/tests/helpers/: mock.ts
website/: bun.lockb  package.json
website/docs/developers/: governance.mdx  membership.mdx
